--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
 
 
 <footer>
- <a href="gitlink" target="_blank">
+ <a href="https://github.com/Moimolcp/montecarlo" target="_blank">
     @GithubLink - Luis Castro
   </a>
 </footer>
